<resources>
    <string name="app_name">NSDKDemo</string>
    <string name="inputPassWord">Please enter password</string>
    <string name="dialog_ok">Confirm</string>
    <string name="msg_check_first">Please finish or cancel current operation first...</string>
    <string name="msg_common_succ">Exec Success</string>
    <string name="msg_common_failed">Exec Failed</string>
    <string name="common_exception">Exception</string>
    <string name="common_slot">Slot:</string>
    <string name="no_card_in_slot">No card in slot</string>
    <string name="card_in_slot">A card inserted</string>
    <string name="common_card_type">Card Type:</string>
    <string name="tv_ma_clean_msg">Clean messages</string>
    <string name="tv_set_debug_mode">Set Debug Mode</string>
    <string name="tv_set_debug_mode_on">On</string>
    <string name="tv_set_debug_mode_off">Off</string>
    <string name="tv_extsmartcard_apdu">Send APDU</string>
    <string name="tv_extsmartcard_crypto_apdu">Send Crypto APDU</string>
    <string name="tv_extsmartcard_powerdown">Power Down</string>
    <string name="tv_display_text">Display Text</string>
    <string name="tv_display_image1">Display Loaded Image</string>
    <string name="tv_display_image2">Display Image</string>
    <string name="tv_display_picture">Display Picture</string>
    <string name="tv_display_loaded_picture">Display Loaded Picture</string>
    <string name="tv_display_qr">Display QR</string>
    <string name="tv_display_loadimage">Load Image</string>
    <string name="tv_display_loadcolorimage">Load Color Image</string>
    <string name="tv_display_clean">Clean Screen</string>
    <string name="tv_display_backhome">Back Home</string>
    <string name="tv_display_autoclean">Automatic Screen Cleaning</string>
    <string name="tv_display_cancelautoclean">Cancel Automatic Screen Cleaning</string>
    <string name="tv_display_exception">Display image exception：</string>
    <string name="tv_display_success">Display image success</string>
    <string name="tv_extcomm_connect_device">Connect Device</string>
    <string name="tv_extcomm_disconnect">Disconnect</string>
    <string name="tv_extcomm_refresh">Refresh</string>
    <string name="tv_extcomm_disconnect_the_device">Disconnect this device?</string>
    <string name="tv_extcomm_forget_the_device">Forget this device?</string>
    <string name="tv_extcomm_pair_the_device">Pair this device?</string>
    <string name="tv_extcomm_pairing">Paring...</string>
    <string name="tv_extcomm_ping">Ping</string>
    <string name="tv_extcomm_pair_switch_on">On</string>
    <string name="tv_extcomm_pair_switch_off">Off</string>
    <string name="tv_extcomm_connected_devices">Connected Devices</string>
    <string name="tv_extcomm_available_devices">Available Devices</string>
    <string name="tv_extdevicebasic_getversionnumber">Get Version Number</string>
    <string name="tv_extbeeper_beep">Beep</string>
    <string name="tv_extdevicebasic_getserialnumber">Get Serial Number</string>
    <string name="tv_extdevicebasic_getconfiguration">Get Configuration</string>
    <string name="tv_extdevicebasic_setconfiguration">Set Configuration</string>
    <string name="tv_extdevicebasic_setconnectmode">Set Connect Mode</string>
    <string name="tv_extdevicebasic_updateapp">Update APP</string>
    <string name="tv_extdevicebasic_updatefirmware">Update Firmware</string>
    <string name="tv_extdevicebasic_reboot">Reboot</string>
    <string name="tv_extdevicebasic_getbattery">Battery Percentage</string>
    <string name="tv_extdevicebasic_setdatetime">Set Datetime</string>
    <string name="tv_extdevicebasic_getdatetime">Get Datetime</string>
    <string name="tv_extdevicebasic_getdeviceinfo">Get Device Info</string>
    <string name="tv_extdevicebasic_setbtname">Set BT Name</string>
    <string name="tv_extdevicebasic_setfullychargedicon">Set Fully Charged Icon</string>
    <string name="tv_extdevicebasic_setpowerofficon">Set Power Off Icon</string>
    <string name="tv_extdevicebasic_setchargingicon">Set Charging Icon</string>
    <string name="tv_extdevicebasic_settimeconfig">Set Time Config</string>
    <string name="tv_extdevicebasic_gettimeconfig">Get Time Config</string>
    <string name="tv_extdevicebasic_setlanguage">Set Language</string>
    <string name="tv_extdevicebasic_getlanguage">Get Language</string>
    <string name="tv_extdevicebasic_getfilelist">Get File List</string>
    <string name="tv_bt_name">BT Name</string>
    <string name="tv_extdevicebasic_getbtinfo">Get BT Info</string>
    <string name="msg_extdevicebasic_getversionsuccess">Get version number success:</string>
    <string name="msg_extdevicebasic_getversionfail">Get version number failed!</string>
    <string name="msg_extdevicebasic_getconfigurationsuccess">Get configuration success:</string>
    <string name="msg_extdevicebasic_getserialnumbersuccess">Get serial number success:</string>
    <string name="msg_extdevicebasic_getbaudrate">Baud rate:</string>
    <string name="msg_extdevicebasic_getbeepcontrol">Beep control:</string>
    <string name="msg_extdevicebasic_getdecryptionmodel">Decryption model:</string>
    <string name="msg_extdevicebasic_beepsuccess">Beep success</string>
    <string name="msg_extdevicebasic_beepfail">Beep failed</string>
    <string name="tv_open_card">Open CardReader</string>
    <string name="tv_open_card_optional">Open CardReader(Optional)</string>
    <string name="tv_open_card_encrypt_track">Open CardReader(encrypt track)</string>
    <string name="tv_revocate_card">Cancel Card Reading</string>
    <string name="tv_display_rfid_logo">Display Rfid Logo</string>
    <string name="tv_cancel_rfid_logo">Cancel Rfid Logo</string>
    <string name="msg_swipe_insert_rf_card">Please swipe, insert or tap a card...</string>
    <string name="msg_cardreader_swiper">Mag card swiped</string>
    <string name="msg_cradreader_insert">Card inserted</string>
    <string name="msg_cardreader_rfcard">Card tapped</string>
    <string name="msg_cancel_open_reader">Cancel to open card reader</string>
    <string name="msg_timeout">Timeout</string>
    <string name="msg_reader_open_exception">CardReader open exception：</string>
    <string name="msg_revocate_reader">Cancel card reading:</string>
    <string name="msg_succ">Success</string>
    <string name="msg_revocate_reader_exception">Cancel card reading, exception:</string>
    <string name="dialog_check_status">Check the selected slot status</string>
    <string name="dialog_select_card_slot">Select the card slot:</string>
    <string name="dialog_ic1">IC1</string>
    <string name="dialog_ic2">IC2</string>
    <string name="dialog_contactless_card">Contactless Card</string>
    <string name="dialog_mag_card">Mag Card</string>
    <string name="dialog_card_search_mode">Card Search Mode:</string>
    <string name="dialog_card_verify_track">Verify Track?</string>
    <string name="dialog_card_polling">Polling Mode</string>
    <string name="dialog_card_event">Event Mode(Power-Saving)</string>
    <string name="msg_device_conn_first">Device is not connected, please connect it first!</string>
    <string name="msg_internal_init_error">Failed to init internal modules.</string>
    <string name="msg_internal_update_error">Please update firmware.</string>
    <string name="tv_cardreader_f">CardReader</string>
    <string name="tv_cipher_f">Crypto</string>
    <string name="tv_pinInput2_f">PINEntry2</string>
    <string name="tv_keyManager_f">KeyManager</string>
    <string name="tv_pinInput_f">PINEntry</string>
    <string name="tv_iccard_f">ContactCard</string>
    <string name="tv_rfcard_f">ContactlessCard</string>
    <string name="tv_light_f">LED</string>
    <string name="tv_terminalmanage_f">DeviceManager</string>
    <string name="tv_printer_f">Printer</string>
    <string name="tv_guest_display_manager">GuestDisplayManager</string>
    <string name="tv_extkeyboard">ExtKeyboard</string>
    <string name="tv_extscan_f">ExtScanner</string>
    <string name="tv_extcardreader_f">ExtCardReader</string>
    <string name="tv_extsmartcard_f">ExtContactCard</string>
    <string name="tv_extcipher_f">ExtCryto</string>
    <string name="tv_extkeymanager_f">ExtKeyManager</string>
    <string name="tv_extpininput_f">ExtPINEntry</string>
    <string name="tv_extlight_f">ExtLED</string>
    <string name="tv_extrki_f">ExtRKI</string>
    <string name="tv_extbeeper_f">ExtBeeper</string>
    <string name="tv_buzzer_f">Beeper</string>
    <string name="tv_scanner_f">Scanner</string>
    <string name="tv_cashbox_f">CashBox</string>
    <string name="tv_uart3port_f">SerialPort</string>
    <string name="tv_ethernet">Ethernet</string>
    <string name="tv_extcontactlesscard_f">ExtContactlessCard</string>
    <string name="tv_extdisplay_f">ExtDisplay</string>
    <string name="tv_extdevicebasic_f">ExtDeviceManager</string>
    <string name="msg_card_vaild_date">Card expiry date:</string>
    <string name="msg_service_code">Service code:</string>
    <string name="tv_iccard_is_inserted">Is Card Inserted</string>
    <string name="tv_iccard_poweron">Power Up</string>
    <string name="tv_iccard_transation">Send APDU</string>
    <string name="tv_iccard_powerof">Power Down</string>
    <string name="tv_iccard_set_config">Set Config</string>
    <string name="msg_iccard_type">Contact Card type:</string>
    <string name="msg_send_data">Send data:</string>
    <string name="msg_receive_data">Receive data:</string>
    <string name="tv_pin_pininput_online">Online PIN</string>
    <string name="tv_pin_pininput_online_normal">Online PIN(Normal)</string>
    <string name="tv_pin_pininput_online_aes">AES Online PIN</string>
    <string name="tv_pin_pininput_online_aes_dukpt">AES DUKPT Online PIN</string>
    <string name="tv_pin_pininput_online_dukpt">DUKPT Online PIN</string>
    <string name="msg_set_device_light">DeviceLight:</string>
    <string name="msg_set_device_light_mode">Light Mode:</string>
    <string name="msg_set_device_light_flashing_interval">Interval(ms):</string>
    <string name="dialog_tv_pin_pininput_test_item">online PIN:</string>
    <string name="dialog_tv_pin_pininput_pan">PAN:</string>
    <string name="dialog_tv_crypto_sign_verify_original_data">Original Data：</string>
    <string name="dialog_tv_defaultkeyid_switch">Use Default Key Cases ID?</string>
    <string name="dialog_tv_check_ic_present">Check IC Card Present?</string>
    <string name="dialog_tv_check_pin_range">Return when pin range error?</string>
    <string name="dialog_tv_auto_complete">Auto Complete?</string>
    <string name="dialog_tv_enable_custom_function_key">Enable Custom function key(Physical Keyboard only)</string>
    <string name="dialog_tv_crypto_use_default_sign_case">Use Default Key Case to Sign-Verify？</string>
    <string name="dialog_tv_felica_polling_system_code">System Code(2 bytes):</string>
    <string name="dialog_tv_felica_polling_request_code">Request Code(1 byte):</string>
    <string name="dialog_tv_felica_polling_time_slot">Timeslot(1 byte):</string>
    <string name="dialog_tv_key_id">KeyID：</string>
    <string name="dialog_tv_asym_encoding_mode">AsymEncodingMode：</string>
    <string name="dialog_tv_message_digest_type">MessageDigestType：</string>
    <string name="dialog_tv_bdk_id">BDK ID:</string>
    <string name="dialog_tv_hkdf_key_id">HKDF KeyID:</string>
    <string name="dialog_tv_hkdf_salt">Salt(Optional):</string>
    <string name="dialog_tv_asym_key_id">AsymKeyID：</string>
    <string name="dialog_tv_asym_key_type">AsymKeyType：</string>
    <string name="dialog_tv_asym_key_usage">AsymKeyUsage：</string>
    <string name="dialog_set_scan_timeout">Scan Timeout(s):</string>
    <string name="dialog_set_scan_focusMode">FocusMode:</string>
    <string name="dialog_set_scan_continuous">Continuous Scanning?</string>
    <string name="input_pin_keyboard_style">Keyboard Style</string>
</resources>