<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dialog_tv_pin_pininput_test_item"/>
    <Switch
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dialog_tv_defaultkeyid_switch"
        android:id="@+id/switch_default_key_id_btn"/>
    <Switch
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dialog_tv_check_ic_present"
        android:id="@+id/switch_check_ic_present"/>
    <Switch
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dialog_tv_check_pin_range"
        android:id="@+id/switch_check_pin_range"/>
    <Switch
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dialog_tv_enable_custom_function_key"
        android:id="@+id/switch_enable_custom_key"/>
    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/rg_pinentry_type">
        <RadioButton
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/tv_pin_pininput_online"
            android:id="@+id/pin_pininput_online_radio"/>
        <RadioButton
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/tv_pin_pininput_online_normal"
            android:id="@+id/pin_pininput_online_normal_radio"/>

        <RadioButton
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/tv_pin_pininput_online_aes"
            android:id="@+id/pin_pininput_online_aes_radio"/>
        <RadioButton
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/tv_pin_pininput_online_dukpt"
            android:id="@+id/pin_pininput_online_dukpt_radio"/>

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_pin_pininput_online_aes_dukpt"
            android:id="@+id/pin_pininput_online_aes_dukpt_radio"/>
    </RadioGroup>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/linear_pininput_editKeyID_params">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:text="@string/dialog_tv_key_id"/>
        <EditText
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:id="@+id/et_pin_pininput_keyID"/>
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/dialog_tv_pin_pininput_pan"
            android:textSize="15sp"
            android:gravity="center_vertical"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="number"
            android:maxLength="19"
            android:id="@+id/et_pin_pininput_panData"/>
    </LinearLayout>


</LinearLayout>