<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dialog_contactless_card"
        android:id="@+id/cb_contactlessCard"/>
    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dialog_mag_card"
        android:id="@+id/cb_magCard"/>
    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dialog_ic1"
        android:id="@+id/cb_ic1"/>
    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dialog_ic2"
        android:id="@+id/cb_ic2"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="10dp"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/dialog_card_search_mode"
            android:gravity="center_vertical"/>
        <Spinner
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:entries="@array/cardSearchMode"
            android:textAlignment="center"
            android:id="@+id/spn_cardSearchMode"/>
    </LinearLayout>
    <Switch
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dialog_card_verify_track"
        android:id="@+id/sw_cardSearch_verifyTrack"/>
</LinearLayout>