<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dialog_tv_pin_pininput_test_item"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/linear_keymanager_getKeyInfo_defaultKeyID_params"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:text="@string/input_pin_keyboard_style"/>
        <Spinner
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:entries="@array/KeyboardStyle"
            android:textAlignment="center"
            android:spinnerMode="dialog"
            android:id="@+id/spn_keyboard_style"/>
    </LinearLayout>
    <Switch
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dialog_tv_check_ic_present"
        android:id="@+id/switch_check_ic_present"/>
    <Switch
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dialog_tv_check_pin_range"
        android:id="@+id/switch_check_pin_range"/>
    <Switch
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dialog_tv_enable_custom_function_key"
        android:id="@+id/switch_enable_custom_key"/>
    <Switch
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dialog_tv_auto_complete"
        android:id="@+id/switch_auto_complete"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/dialog_tv_pin_pininput_pan"
            android:textSize="15sp"
            android:gravity="center_vertical"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="number"
            android:maxLength="19"
            android:id="@+id/et_pin_pininput_panData"/>
    </LinearLayout>


</LinearLayout>