<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <Switch
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dialog_tv_crypto_use_default_sign_case"
        android:id="@+id/switch_default_key_id_btn"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/linear_sign_asym_edit_key_id_cases_params">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:text="@string/dialog_tv_asym_key_id"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textAlignment="center"
            android:entries="@array/AsymKeyID"
            android:id="@+id/et_sign_verify_asym_keyID"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:text="@string/dialog_tv_asym_key_type"/>
        <Spinner
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textAlignment="center"
            android:entries="@array/AsymKeyType"
            android:id="@+id/spn_sign_verify_asym_keyType"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:text="@string/dialog_tv_asym_key_usage"/>
        <Spinner
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textAlignment="center"
            android:entries="@array/AsymKeyUsage"
            android:id="@+id/spn_sign_verify_asym_keyUsage"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:text="@string/dialog_tv_message_digest_type"/>
        <Spinner
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textAlignment="center"
            android:entries="@array/MessageDigestType"
            android:id="@+id/spn_sign_verify_asym_messageDigestType"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:text="@string/dialog_tv_asym_encoding_mode"/>
        <Spinner
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textAlignment="center"
            android:entries="@array/AsymEncodingMode"
            android:id="@+id/spn_sign_verify_asym_encodingMode"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:text="@string/dialog_tv_crypto_sign_verify_original_data"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/et_sign_verify_original_data"/>
    </LinearLayout>

</LinearLayout>