<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:text="@string/dialog_set_scan_focusMode"/>
        <Spinner
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textAlignment="center"
            android:entries="@array/focusMode"
            android:id="@+id/spn_FocusMode"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:text="@string/dialog_set_scan_timeout"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="number"
            android:id="@+id/edit_scan_timeout"/>
    </LinearLayout>
    <Switch
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dialog_set_scan_continuous"
        android:id="@+id/sw_isContinuousScanning"/>

</LinearLayout>