<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:text="@string/dialog_tv_felica_polling_system_code"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:maxLength="4"
            android:id="@+id/edit_felica_polling_systemCode"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:text="@string/dialog_tv_felica_polling_request_code"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:maxLength="2"
            android:id="@+id/edit_felica_polling_requestCode"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:text="@string/dialog_tv_felica_polling_time_slot"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:maxLength="2"
            android:id="@+id/edit_felica_polling_timeslot"/>
    </LinearLayout>

</LinearLayout>